chore: update resume link

--- a/index.html
+++ b/index.html
@@ -94,8 +94,14 @@
 
             <p>
               Front-end developer with primary foucs on Front web techniques
-              <a href="Resume-en.pdf">Download Resume</a>
-              <a href="Resume.pdf">下載履歷</a>
+              <a
+                href="https://docs.google.com/document/d/1h5lyAwmuYtPBR8c6KRLTW71JeUax6NCQyxG4OgPm72E/edit?usp=sharing"
+                target="_blank"
+                >Download Resume</a
+              >
+              <a href="https://www.cakeresume.com/yuenuni" target="_blank"
+                >下載履歷</a
+              >
             </p>
 
             <div id="skills">
