modify resume text

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
               <a
                 href="https://docs.google.com/document/d/1h5lyAwmuYtPBR8c6KRLTW71JeUax6NCQyxG4OgPm72E/edit?usp=sharing"
                 target="_blank"
-                >Download Resume</a
+                >Resume</a
               >
               <a href="https://www.cakeresume.com/yuenuni" target="_blank"
-                >下載履歷</a
+                >履歷</a
               >
             </p>
 
